Mobile Spacing fix

--- a/src/components/Image/ImageGrid/ImageGrid.module.css
+++ b/src/components/Image/ImageGrid/ImageGrid.module.css
@@ -120,7 +120,7 @@
   }
 }
 
-@media screen and (max-width: 668px) {
+@media screen and (max-width: 700px) {
   .img400 {
     width: 300px;
     height: 300px;
@@ -144,14 +144,14 @@
   }
 }
 
-@media screen and (max-width: 568px) {
+@media screen and (max-width: 600px) {
   .img400 {
     width: 280px;
     height: 280px;
   }
 }
 
-@media screen and (max-width: 480px) {
+@media screen and (max-width: 580px) {
   .img400 {
     width: 200px;
     height: 200px;
@@ -175,7 +175,7 @@
   }
 }
 
-@media screen and (max-width: 400px) {
+@media screen and (max-width: 430px) {
   .img400 {
     width: 150px;
     height: 150px;
@@ -196,5 +196,29 @@
   .img275 {
     width: 140px;
     height: 140px;
+  }
+}
+
+@media screen and (max-width: 375px) {
+  .img400 {
+    width: 140px;
+    height: 140px;
+  }
+
+  .img100,
+  .square1,
+  .square2 {
+    width: 40px;
+    height: 40px;
+  }
+
+  .img200 {
+    width: 90px;
+    height: 90px;
+  }
+
+  .img275 {
+    width: 130px;
+    height: 130px;
   }
 }
